# Memoria

./: .gitignore  README.md
api_app_zk/: .babelrc  .eslintignore  .eslintrc  README.md  package-lock.json  package.json
api_app_zk/src/: index.js
api_app_zk/src/config/: codes.js  constants.js  environment.js
api_app_zk/src/errors/: index.js
api_app_zk/src/responses/: index.js
api_app_zk/src/schemes/: voter.js
api_app_zk/src/services/proof/: index.js  proof.handler.js  proof.service.js
api_app_zk/src/services/utils/: apicc.js  artifacts.js  fabUtils.js  zokrates.js
api_app_zk/src/static/: ccp.json  verification.key  vote.zok  wit.sh
api_app_zk/src/validator/: index.js
front-zk/: .gitignore  README.md  readme.md
front-zk/app/: package-lock.json  package.json
front-zk/app/src/: App.js
front-zk/app/src/codes/: hash.js
front-zk/app/src/components/: Navbar.js  Register.js  Root.js  Setup.js  Vote.js
front-zk/app/src/config/: constant.js
front-zk/app/src/helpers/: apicc.js  format.js
front-zk/app/src/utils/: genId.js  voting.js
front-zk/lib/: Cargo.toml  lib.rs.bak
front-zk/lib/src/: artifacts.rs  babyjubjub.rs  eddsa.rs  errors.rs  field.rs  lib.rs  main.rs.bak  math_utils.rs  pedersen_hash.rs
front-zk/zk_lib/: Cargo.toml.bak  README.md
front-zk/zk_lib/src/utils/: bellman.rs
voteCC/: go.mod  voteCC.go
voteCC2/: README.md  go.sum  voteCC.go
